Adicionado template base

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,18 +1,5 @@
+{% extends "core/base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DietHub</title>
-    <link rel="stylesheet" href="{% static 'estilos/estilo.css' %}" />
-    <link
-      rel="shortcut icon"
-      href="static/icons/logoIcon.svg"
-      type="image/x-icon"
-    />
-  </head>
 
 {% block main %}
 <body>
