--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,36 +1,46 @@
-{% extends "core/base.html" %}
-{% load static %}
-
-{% block main %}
+{% extends "core/base.html" %} {% load static %} {% block main %}
 <body>
-    <main id="loginMain">
-        <section class="imagem-login">
-            <img src={% static 'imagens/Group 74.png' %} alt="DietHub">
-            <h1>Bem vindo(a)!</h1>
-            <img src={% static 'imagens/Eating healthy food-bro 1.png' %} alt="Mulher comendo">
-        </section>
-        <section id="login">
-            <h1>Login</h1>
-            <h3>Faça login para continuar</h3>
-            <br>
-            <form action="../index.html">
-                <div class="formItem">
-                    <label for="" id="label-email">Email:</label>
-                    <input type="email" placeholder="user@gmail.com">
-                </div>
-                <div class="formItem">
-                    <label for="" id="label-senha">Senha:</label>
-                    <input type="password">
-                    <br>
-                    <a href="esqueciSenha.html">Esqueci a senha</a>
-                </div>
-                <br>
-                <div id="formBtns">
-                    <button type="Entrar">Entrar</button>
-                </div>
-                <p>Ainda não é cadastrado? <a href="cadastro.html">Cadastre-se</a></p>
-            </form>
-        </section>
-    </main>
+  <nav class="side-bar">
+    <a href="#" class="logo">
+      <img src={% static 'imagens/logo-diet-hub.svg' %} alt="Logo DietHub">
+    </a>
+
+    <ul>
+      <li class="opcao-do-menu opcao-do-menu-atual">
+        <a href="#">
+          <i class="ph ph-house-line"></i>
+          <span>Home</span>
+        </a>
+      </li>
+
+      <li class="opcao-do-menu">
+        <a href="#">
+          <i class="ph ph-notepad"></i>
+          <span> Formulários </span>
+        </a>
+      </li>
+
+      <li class="opcao-do-menu">
+        <a href="#">
+          <i class="ph ph-apple-logo"></i>
+          <span>Alimentos</span>
+        </a>
+      </li>
+
+      <li class="opcao-do-menu">
+        <a href="#">
+          <i class="ph ph-gear-six"></i>
+          <span>Configurações</span>
+        </a>
+      </li>
+
+      <li class="opcao-do-menu">
+        <a href="#">
+          <i class="ph ph-moon-stars"></i>
+          <span>Tema dark</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 </body>
 {% endblock %}
