--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,4 +1,3 @@
-
 {%load static%}
 
 <!DOCTYPE html>
@@ -8,7 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DietHub</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="{% static 'estilos/estilo.css' %}" />
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
   {% block main %} {% endblock %}
 </html>
