--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -15,8 +15,56 @@
       rel="stylesheet"
     />
 
+    <link rel="icon" type="image/x-icon" href="imagens/favicon.ico" />
+
     <link rel="stylesheet" href="{% static 'estilos/estilo.css' %}" />
+
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
-  {% block main %} {% endblock %}
+
+  <body>
+    <nav class="side-bar">
+      <a href="#" class="logo">
+        <img src={% static 'imagens/logo-diet-hub.svg' %} alt="Logo DietHub">
+      </a>
+
+      <ul>
+        <li class="opcao-do-menu opcao-do-menu-atual">
+          <a href="#">
+            <i class="ph ph-house-line"></i>
+            <span>Home</span>
+          </a>
+        </li>
+
+        <li class="opcao-do-menu">
+          <a href="#">
+            <i class="ph ph-notepad"></i>
+            <span> Formulários </span>
+          </a>
+        </li>
+
+        <li class="opcao-do-menu">
+          <a href="#">
+            <i class="ph ph-apple-logo"></i>
+            <span>Alimentos</span>
+          </a>
+        </li>
+
+        <li class="opcao-do-menu">
+          <a href="#">
+            <i class="ph ph-gear-six"></i>
+            <span>Configurações</span>
+          </a>
+        </li>
+
+        <li class="opcao-do-menu">
+          <a href="#">
+            <i class="ph ph-moon-stars"></i>
+            <span>Tema dark</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    {% block main %} {% endblock %}
+  </body>
 </html>
