--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,46 +1,23 @@
 {% extends "core/base.html" %} {% load static %} {% block main %}
-<body>
-  <nav class="side-bar">
-    <a href="#" class="logo">
-      <img src={% static 'imagens/logo-diet-hub.svg' %} alt="Logo DietHub">
-    </a>
-
-    <ul>
-      <li class="opcao-do-menu opcao-do-menu-atual">
+<main>
+  <header>
+    <nav class="breadcrumbs">
+      <div class="breadcrumb">
         <a href="#">
           <i class="ph ph-house-line"></i>
-          <span>Home</span>
+          <span>Home /</span>
         </a>
-      </li>
+      </div>
+    </nav>
 
-      <li class="opcao-do-menu">
-        <a href="#">
-          <i class="ph ph-notepad"></i>
-          <span> Formulários </span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="#">
-          <i class="ph ph-apple-logo"></i>
-          <span>Alimentos</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="#">
-          <i class="ph ph-gear-six"></i>
-          <span>Configurações</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="#">
-          <i class="ph ph-moon-stars"></i>
-          <span>Tema dark</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-</body>
+    <div class="informacoes-do-usuario">
+      <div class="texto-informacoes-do-usuario">
+        <span class="nome-do-usuario">Claudinei Camilo</span>
+        <span class="tipo-de-usuario">Nutricionista</span>
+      </div>
+      <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
+    </div>
+  </header>
+  <h1>Seus pacientes</h1>
+</main>
 {% endblock %}
