--- a/core/templates/core/visualizarDieta.html
+++ b/core/templates/core/visualizarDieta.html
@@ -43,22 +43,26 @@
                 </section>
                 <div id="cafe">
                     <h3>Café da manhã</h3>
-                    <div id="alimento-1">
-                        <h3>Alimento 1: </h3>
-                        <p>Salada de frutas</p>
-                    </div>
-                    <div id="alimento-2">
-                        <h3>Alimento 2: </h3>
-                        <p>Vitamina</p>
-                    </div>
-                    <div id="substituto-1">
-                        <h3>Substituto: </h3>
-                        <p>Vitamina</p> 
-                    </div>
-                    <div id="substituto-2">
-                        <h3>Substituto: </h3>
-                        <p>Salada de frutas</p>
-                    </div>
+                    <section id="parte-1">
+                        <div id="alimento-1" class="alimentos-1">
+                            <h3>Alimento 1: </h3>
+                            <p>Salada de frutas</p>
+                        </div>
+                        <div id="substituto-1" class="alimentos-1">
+                            <h3>Substituto: </h3>
+                            <p>Vitamina</p> 
+                        </div>
+                    </section>
+                    <section id="parte-2">
+                        <div id="alimento-2" class="alimentos-2">
+                            <h3>Alimento 2: </h3>
+                            <p>Vitamina</p>
+                        </div>
+                        <div id="substituto-2" class="alimento-2">
+                            <h3>Substituto: </h3>
+                            <p>Salada de frutas</p>
+                        </div>
+                    </section>
                 </div>
             </section>
             <section id="calorias">
@@ -70,7 +74,7 @@
                 </div>
             </section>
             <section id="button-diario">
-                <a href="diarioAlimentar.html">Diário Alimentar</a>
+                <a href="diarioAlimentar.html">Diário Alimentar ></a>
             </section>
         </main>
 </body>
