--- a/core/static/estilos/estilo.css
+++ b/core/static/estilos/estilo.css
@@ -85,11 +85,11 @@ body{
 .quadros{
     margin-bottom: 20px; 
 }
-#conatainer-3{
+#container-3{
     display: flex;
 }
 .topo-dieta{
-    margin-bottom: 40px;
+    margin-bottom: 400px;
 }
 #container-3 button{
     width: 132px;
@@ -108,4 +108,14 @@ body{
 }
 #button-diario a{
     color:#0C9A61;
+    text-align: left;
+    margin-left: 90%;
+}
+#parte-1,
+#parte-2{
+    display: flex;
+}
+.alimentos-1,
+.alimentos-2{
+    margin-bottom: 30px;
 }
