--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -18,6 +18,12 @@
       <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
     </div>
   </header>
-  <h1>Seus pacientes</h1>
+  <section class="conteudo-principal">
+    <div class="cabecalho-conteudo-principal">
+      <h1>Seus pacientes</h1>
+  
+      <button>Novo paciente</button>  
+    <div>
+  </section>
 </main>
 {% endblock %}
