--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,29 +1,34 @@
-{% extends "core/base.html" %} {% load static %} {% block main %}
-<main>
-  <header>
-    <nav class="breadcrumbs">
-      <div class="breadcrumb">
-        <a href="#">
-          <i class="ph ph-house-line"></i>
-          <span>Home /</span>
-        </a>
-      </div>
-    </nav>
+{% extends "core/base.html" %} 
+{% load static %}
+  {% block main %}
+  <main>
+    <header>
+      <nav class="breadcrumbs">
+        <div class="breadcrumb">
+          <a href="#">
+            <i class="ph ph-house-line"></i>
+            <span>Home /</span>
+          </a>
+        </div>
+      </nav>
 
-    <div class="informacoes-do-usuario">
-      <div class="texto-informacoes-do-usuario">
-        <span class="nome-do-usuario">Claudinei Camilo</span>
-        <span class="tipo-de-usuario">Nutricionista</span>
+      <div class="informacoes-do-usuario">
+        <div class="texto-informacoes-do-usuario">
+          <span class="nome-do-usuario">Claudinei Camilo</span>
+          <span class="tipo-de-usuario">Nutricionista</span>
+        </div>
+        <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
       </div>
-      <img src={% static 'imagens/usuario.svg' %} alt="Logo DietHub">
-    </div>
-  </header>
-  <section class="conteudo-principal">
-    <div class="cabecalho-conteudo-principal">
-      <h1>Seus pacientes</h1>
-  
-      <button>Novo paciente</button>  
-    <div>
-  </section>
-</main>
+    </header>
+    <section class="conteudo-principal">
+      <div class="cabecalho-conteudo-principal">
+        <h1>Seus pacientes</h1>
+    
+        <button>Novo paciente</button>  
+      <div>
+
+        {% block collapse %} {% endblock %}
+
+      </section>
+  </main>
 {% endblock %}
