:art: fix de collapse que não era exibido

--- a/core/templates/core/collapse.html
+++ b/core/templates/core/collapse.html
@@ -1,4 +1,6 @@
-{% extends "core/base.html" %} {% load static %} {% block collapse %}
+{% extends "core/base.html" %}
+{% load static %}
+{% block collapse %}
 <ul id="accordion">
   <li>
     <label for="first">Paciente 1 <span>&#x3e;</span></label>
@@ -37,4 +39,4 @@
   </li>
 </ul>
 
-{% endblock collapse %}
+{% endblock %}
