--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,6 +1,6 @@
-{% extends "core/base.html" %} 
+{% extends "core/collapse.html" %} 
 {% load static %}
-  {% block main %}
+{% block main %}
   <main>
     <header>
       <nav class="breadcrumbs">
@@ -27,8 +27,7 @@
         <button>Novo paciente</button>  
       <div>
 
-        {% block collapse %} {% endblock %}
-
-      </section>
+        {%block collapse %} {{block.super}} {%endblock%}
+    </section>
   </main>
 {% endblock %}
