--- a/core/templates/core/visualizarDieta.html
+++ b/core/templates/core/visualizarDieta.html
@@ -11,6 +11,9 @@
                 <section id="perfil"class="topo-visualizar">
                     <p>Karla Nunes</p>
                     <p id="paciente">Paciente</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
+                        <circle cx="20" cy="20" r="20" fill="#FF8D61"/>
+                      </svg>
                 </section>
             </section>
             <section id="informacoes-dieta">
