--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,4 +1,3 @@
-
 {%load static%}
 
 <!DOCTYPE html>
@@ -9,6 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DietHub</title>
     <link rel="stylesheet" href="{% static 'estilos/estilo.css' %}" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
   {% block main %} {% endblock %}
 </html>
