--- a/core/templates/core/visualizarDieta.html
+++ b/core/templates/core/visualizarDieta.html
@@ -16,79 +16,84 @@
                       </svg>
                 </section>
             </section>
-            <section id="informacoes-dieta">
-                <section id="informacoes">
-                    <h1>Informações gerais</h1>
-                    <h4>Aqui haverá uma breve descrição do nutricionista  sobre as condições do paciente.
-                        Pode ser um diagnóstico, comentários, informações gerais, etc.</h4> 
-                    <section id="container-2">
-                        <div id="objetivo" class="quadros">
-                            <p class="labels">Seu objetivo</p>
-                            <p><strong>Perder gordura</strong></p>
-                        </div>
-                        <div id="diagnostico" class="quadros">
-                            <p class="labels">Diagnóstico</p>
-                            <p><strong>Obesidade</strong></p>
-                        </div>
-                        <div id="status" class="quadros">
-                            <p class="labels">status</p>
-                            <p><strong>Dieta em andamento</strong></p>
+            <div id="conteudo-dieta">
+                <section id="informacoes-dieta">
+                    <section id="informacoes">
+                        <h1>Informações gerais</h1>
+                        <h4>Aqui haverá uma breve descrição do nutricionista  sobre as condições do paciente.
+                            Pode ser um diagnóstico, comentários, informações gerais, etc.</h4> 
+                        <section id="container-2">
+                            <div id="objetivo" class="quadros">
+                                <p class="labels">Seu objetivo</p>
+                                <p><strong>Perder gordura</strong></p>
+                            </div>
+                            <div id="diagnostico" class="quadros">
+                                <p class="labels">Diagnóstico</p>
+                                <p><strong>Obesidade</strong></p>
+                            </div>
+                            <div id="status" class="quadros">
+                                <p class="labels">status</p>
+                                <p><strong>Dieta em andamento</strong></p>
+                            </div>
+                        </section>
+                    </section>
+                    <section id="dieta">
+                        <section id="container-3">
+                            <div class="topo-dieta">
+                                <h1>Sua dieta</h1>
+                            </div>
+                            <div id="form-btns" class="topo-dieta">
+                                <button type="Diario-alimentar">Diário Alimentar</button>
+                            </div>
+                        </section>
+                        <div id="cafe">
+                            <section id="cafe-da-manha">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="27" height="20" viewBox="0 0 27 20" fill="none">
+                                    <path d="M9.16083 4.375V1.875C9.16083 1.75068 9.22472 1.63145 9.33844 1.54354C9.45217 1.45564 9.60641 1.40625 9.76724 1.40625C9.92807 1.40625 10.0823 1.45564 10.196 1.54354C10.3098 1.63145 10.3737 1.75068 10.3737 1.875V4.375C10.3737 4.49932 10.3098 4.61855 10.196 4.70646C10.0823 4.79436 9.92807 4.84375 9.76724 4.84375C9.60641 4.84375 9.45217 4.79436 9.33844 4.70646C9.22472 4.61855 9.16083 4.49932 9.16083 4.375ZM13.0014 4.84375C13.1623 4.84375 13.3165 4.79436 13.4302 4.70646C13.544 4.61855 13.6079 4.49932 13.6079 4.375V1.875C13.6079 1.75068 13.544 1.63145 13.4302 1.54354C13.3165 1.45564 13.1623 1.40625 13.0014 1.40625C12.8406 1.40625 12.6864 1.45564 12.5726 1.54354C12.4589 1.63145 12.395 1.75068 12.395 1.875V4.375C12.395 4.49932 12.4589 4.61855 12.5726 4.70646C12.6864 4.79436 12.8406 4.84375 13.0014 4.84375ZM16.2356 4.84375C16.3965 4.84375 16.5507 4.79436 16.6644 4.70646C16.7782 4.61855 16.8421 4.49932 16.8421 4.375V1.875C16.8421 1.75068 16.7782 1.63145 16.6644 1.54354C16.5507 1.45564 16.3965 1.40625 16.2356 1.40625C16.0748 1.40625 15.9206 1.45564 15.8068 1.54354C15.6931 1.63145 15.6292 1.75068 15.6292 1.875V4.375C15.6292 4.49932 15.6931 4.61855 15.8068 4.70646C15.9206 4.79436 16.0748 4.84375 16.2356 4.84375ZM25.7361 9.375V10C25.7365 10.7732 25.3466 11.5161 24.6494 12.0705C23.9521 12.6249 23.0025 12.9472 22.0026 12.9688C21.4075 14.3263 20.3144 15.5206 18.8564 16.4062H21.8955C22.0563 16.4062 22.2106 16.4556 22.3243 16.5435C22.438 16.6315 22.5019 16.7507 22.5019 16.875C22.5019 16.9993 22.438 17.1185 22.3243 17.2065C22.2106 17.2944 22.0563 17.3438 21.8955 17.3438H4.10739C3.94656 17.3438 3.79232 17.2944 3.67859 17.2065C3.56487 17.1185 3.50098 16.9993 3.50098 16.875C3.50098 16.7507 3.56487 16.6315 3.67859 16.5435C3.79232 16.4556 3.94656 16.4062 4.10739 16.4062H7.14653C6.01318 15.7182 5.09634 14.8405 4.46492 13.8392C3.8335 12.8379 3.50393 11.7389 3.50098 10.625V6.875C3.50098 6.75068 3.56487 6.63145 3.67859 6.54354C3.79232 6.45564 3.94656 6.40625 4.10739 6.40625H21.8955C22.9141 6.40625 23.891 6.71903 24.6112 7.27578C25.3315 7.83253 25.7361 8.58764 25.7361 9.375ZM21.2891 10.625V7.34375H4.7138V10.625C4.71701 11.834 5.16131 13.0178 5.99567 14.0405C6.83003 15.0631 8.02061 15.8831 9.43068 16.4062H16.5722C17.9823 15.8831 19.1729 15.0631 20.0072 14.0405C20.8416 13.0178 21.2859 11.834 21.2891 10.625ZM24.5233 9.375C24.5231 8.91789 24.3235 8.4742 23.9566 8.11566C23.5898 7.75712 23.0773 7.5047 22.5019 7.39922V10.625C22.5017 11.0875 22.4445 11.549 22.3311 12.0031C22.9439 11.9235 23.5004 11.6786 23.9017 11.3119C24.3031 10.9451 24.5233 10.4803 24.5233 10V9.375Z" fill="#0C9A61"/>
+                                </svg>
+                                <h3>Café da manhã</h3>
+                            </section>
+                            <section id="parte-1">
+                                <div id="alimento-1" class="alimentos-1">
+                                    <h3>Alimento 1: </h3>
+                                    <p>Salada de frutas</p>
+                                </div>
+                                <div id="substituto-1" class="alimentos-1">
+                                    <h3>Substituto: </h3>
+                                    <p>Vitamina</p> 
+                                </div>
+                            </section>
+                            <section id="parte-2">
+                                <div id="alimento-2" class="alimentos-2">
+                                    <h3>Alimento 2: </h3>
+                                    <p>Vitamina</p>
+                                </div>
+                                <div id="substituto-2" class="alimentos-2">
+                                    <h3>Substituto: </h3>
+                                    <p>Salada de frutas</p>
+                                </div>
+                            </section>
                         </div>
                     </section>
                 </section>
-                <section id="dieta">
-                    <section id="container-3">
-                        <div class="topo-dieta">
-                            <h1>Sua dieta</h1>
+                <section id="calorias">
+                    <div id="conteudo-calorias">
+                        <h1>Calorias</h1>
+                        <h4>Registre o diário alimentar para visualizar quantas calorias você já consumiu</h4>
+                        <div id="consumiu">
+                            <h4>Você já consumiu:</h4>
+                            <p><strong>100kcal</strong></p>
                         </div>
-                        <div id="form-btns" class="topo-dieta">
-                            <button type="Diario-alimentar">Diário Alimentar</button>
-                        </div>
-                    </section>
-                    <div id="cafe">
-                        <section id="cafe-da-manha">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="20" viewBox="0 0 27 20" fill="none">
-                                <path d="M9.16083 4.375V1.875C9.16083 1.75068 9.22472 1.63145 9.33844 1.54354C9.45217 1.45564 9.60641 1.40625 9.76724 1.40625C9.92807 1.40625 10.0823 1.45564 10.196 1.54354C10.3098 1.63145 10.3737 1.75068 10.3737 1.875V4.375C10.3737 4.49932 10.3098 4.61855 10.196 4.70646C10.0823 4.79436 9.92807 4.84375 9.76724 4.84375C9.60641 4.84375 9.45217 4.79436 9.33844 4.70646C9.22472 4.61855 9.16083 4.49932 9.16083 4.375ZM13.0014 4.84375C13.1623 4.84375 13.3165 4.79436 13.4302 4.70646C13.544 4.61855 13.6079 4.49932 13.6079 4.375V1.875C13.6079 1.75068 13.544 1.63145 13.4302 1.54354C13.3165 1.45564 13.1623 1.40625 13.0014 1.40625C12.8406 1.40625 12.6864 1.45564 12.5726 1.54354C12.4589 1.63145 12.395 1.75068 12.395 1.875V4.375C12.395 4.49932 12.4589 4.61855 12.5726 4.70646C12.6864 4.79436 12.8406 4.84375 13.0014 4.84375ZM16.2356 4.84375C16.3965 4.84375 16.5507 4.79436 16.6644 4.70646C16.7782 4.61855 16.8421 4.49932 16.8421 4.375V1.875C16.8421 1.75068 16.7782 1.63145 16.6644 1.54354C16.5507 1.45564 16.3965 1.40625 16.2356 1.40625C16.0748 1.40625 15.9206 1.45564 15.8068 1.54354C15.6931 1.63145 15.6292 1.75068 15.6292 1.875V4.375C15.6292 4.49932 15.6931 4.61855 15.8068 4.70646C15.9206 4.79436 16.0748 4.84375 16.2356 4.84375ZM25.7361 9.375V10C25.7365 10.7732 25.3466 11.5161 24.6494 12.0705C23.9521 12.6249 23.0025 12.9472 22.0026 12.9688C21.4075 14.3263 20.3144 15.5206 18.8564 16.4062H21.8955C22.0563 16.4062 22.2106 16.4556 22.3243 16.5435C22.438 16.6315 22.5019 16.7507 22.5019 16.875C22.5019 16.9993 22.438 17.1185 22.3243 17.2065C22.2106 17.2944 22.0563 17.3438 21.8955 17.3438H4.10739C3.94656 17.3438 3.79232 17.2944 3.67859 17.2065C3.56487 17.1185 3.50098 16.9993 3.50098 16.875C3.50098 16.7507 3.56487 16.6315 3.67859 16.5435C3.79232 16.4556 3.94656 16.4062 4.10739 16.4062H7.14653C6.01318 15.7182 5.09634 14.8405 4.46492 13.8392C3.8335 12.8379 3.50393 11.7389 3.50098 10.625V6.875C3.50098 6.75068 3.56487 6.63145 3.67859 6.54354C3.79232 6.45564 3.94656 6.40625 4.10739 6.40625H21.8955C22.9141 6.40625 23.891 6.71903 24.6112 7.27578C25.3315 7.83253 25.7361 8.58764 25.7361 9.375ZM21.2891 10.625V7.34375H4.7138V10.625C4.71701 11.834 5.16131 13.0178 5.99567 14.0405C6.83003 15.0631 8.02061 15.8831 9.43068 16.4062H16.5722C17.9823 15.8831 19.1729 15.0631 20.0072 14.0405C20.8416 13.0178 21.2859 11.834 21.2891 10.625ZM24.5233 9.375C24.5231 8.91789 24.3235 8.4742 23.9566 8.11566C23.5898 7.75712 23.0773 7.5047 22.5019 7.39922V10.625C22.5017 11.0875 22.4445 11.549 22.3311 12.0031C22.9439 11.9235 23.5004 11.6786 23.9017 11.3119C24.3031 10.9451 24.5233 10.4803 24.5233 10V9.375Z" fill="#0C9A61"/>
+                    </div>
+                    <div id="button-diario">
+                        <a href="diarioAlimentar.html">Diário Alimentar</a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                            <path d="M14.0813 10.3313L7.83128 16.5813C7.74242 16.6641 7.62489 16.7092 7.50345 16.707C7.38201 16.7049 7.26615 16.6557 7.18026 16.5698C7.09438 16.4839 7.04518 16.368 7.04304 16.2466C7.0409 16.1252 7.08598 16.0076 7.16878 15.9188L13.0867 10L7.16878 4.08128C7.08598 3.99242 7.0409 3.87489 7.04304 3.75345C7.04518 3.63201 7.09438 3.51615 7.18026 3.43026C7.26615 3.34438 7.38201 3.29518 7.50345 3.29304C7.62489 3.2909 7.74242 3.33598 7.83128 3.41878L14.0813 9.66878C14.1691 9.75667 14.2184 9.87581 14.2184 10C14.2184 10.1242 14.1691 10.2434 14.0813 10.3313Z" fill="#0C9A61"/>
                             </svg>
-                            <h3>Café da manhã</h3>
-                        </section>
-                        <section id="parte-1">
-                            <div id="alimento-1" class="alimentos-1">
-                                <h3>Alimento 1: </h3>
-                                <p>Salada de frutas</p>
-                            </div>
-                            <div id="substituto-1" class="alimentos-1">
-                                <h3>Substituto: </h3>
-                                <p>Vitamina</p> 
-                            </div>
-                        </section>
-                        <section id="parte-2">
-                            <div id="alimento-2" class="alimentos-2">
-                                <h3>Alimento 2: </h3>
-                                <p>Vitamina</p>
-                            </div>
-                            <div id="substituto-2" class="alimento-2">
-                                <h3>Substituto: </h3>
-                                <p>Salada de frutas</p>
-                            </div>
-                        </section>
                     </div>
                 </section>
-            </section>
-            <section id="calorias">
-                <h1>Calorias</h1>
-                <h4>Registre o diário alimentar para visualizar quantas calorias você já consumiu</h4>
-                <div id="consumiu">
-                    <h4>Você já consumiu:</h4>
-                    <p><strong>100kcal</strong></p>
-                </div>
-            </section>
-            <section id="button-diario">
-                <a href="diarioAlimentar.html">Diário Alimentar</a>
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path d="M14.0813 10.3313L7.83128 16.5813C7.74242 16.6641 7.62489 16.7092 7.50345 16.707C7.38201 16.7049 7.26615 16.6557 7.18026 16.5698C7.09438 16.4839 7.04518 16.368 7.04304 16.2466C7.0409 16.1252 7.08598 16.0076 7.16878 15.9188L13.0867 10L7.16878 4.08128C7.08598 3.99242 7.0409 3.87489 7.04304 3.75345C7.04518 3.63201 7.09438 3.51615 7.18026 3.43026C7.26615 3.34438 7.38201 3.29518 7.50345 3.29304C7.62489 3.2909 7.74242 3.33598 7.83128 3.41878L14.0813 9.66878C14.1691 9.75667 14.2184 9.87581 14.2184 10C14.2184 10.1242 14.1691 10.2434 14.0813 10.3313Z" fill="#0C9A61"/>
-                    </svg>
-            </section>
+                
+            </div>
         </main>
 </body>
 {% endblock %}
